# uct_seg

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: artifact.yaml  bv.yaml  dendrite.yaml  nuclei.yaml
demo/: README.md
docs/: data_paths.md
scripts/: _paths.py  ng_view.py  prep_dyer.py  prep_nucmm.py  prep_nucmm_curate.py  prep_xt_ct.py
tests/: README.md  _bootstrap.py  test_butterfly.py  test_imops.py  test_io.py  test_nuclei_postproc.py  test_seg_ops.py  test_slurm.py  test_vast.py  test_viz.py
uct_seg/: __init__.py
uct_seg/artifact/: __init__.py  mask.py
uct_seg/bv/: __init__.py  preproc.py
uct_seg/celltype/: __init__.py
uct_seg/dendrite/: __init__.py
uct_seg/nuclei/: __init__.py  curate.py  postproc.py
uct_seg/slurm/: gen_jobs.py
uct_seg/util/: __init__.py  butterfly.py  imops.py  io.py  seg_ops.py  vast.py  viz.py
